[build-system]
requires = [
  "setuptools >=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cocopp"
authors = [
  {name="Dimo Brockhoff", email="dimo.brockhoff@inria.fr"},
  {name="Nikolaus Hansen", email="nikolaus.hansen@inria.fr"},
  {name="Raymond Ros"},
  {name="Dejan Tusar"},
]
description = "Benchmarking framework for all types of black-box optimization algorithms, postprocessing."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Intended Audience :: Education",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib >=3.5.0",
  "numpy >=1.21.0",
  "platformdirs >=3.8.1",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "cocopp._version.__version__"}

[project.urls]
Homepage = "https://numbbo.github.io"
Issues = "https://github.com/numbbo/coco/issues"
Repository = "https://github.com/numbbo/coco"

[tool.setuptools]
packages = [
  "cocopp",
  "cocopp.comp2",
  "cocopp.compall"
]
